Fix pipeline problems

--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,14 +1,5 @@
-OFROM jenkins/jenkins:lts
+FROM jenkins/jenkins:lts
 
 USER root
-
-# Install Docker CLI
-RUN apt-get update && \
-    apt-get install -y docker.io && \
-    apt-get clean
-
-# Add jenkins user to docker group
-RUN usermod -aG docker jenkins
-
+RUN apt-get update && apt-get install -y docker.io
 USER jenkins
-
